# UGent-3

./: README.md  db_dummy.sql  docker-compose.yml  mock_ups.fig  nginx.conf
backend/: .gitignore  Dockerfile  Dockerfile.test  Dockerfile_auth  Dockerfile_auth_test  README.md  auth_requirements.txt  db_construct.sql  dev-requirements.txt  entry-point.sh  environment.env  flake.nix  pylintrc  pyproject.toml  requirements.txt  run_tests.sh  test-oauth-config.json  test.py  tests.yaml
backend/project/: __init__.py  __main__.py  database.py  db_in.py  executor.py  init_auth.py  sessionmaker.py  test.py  utils.py
backend/project/endpoints/: OpenAPI_Object.json  courses.py  index.py  submissions.py  users.py
backend/project/models/: course.py  course_relation.py  course_relations.py  course_share_code.py  courses.py  group.py  group_student.py  model_test.py  project.py  projects.py  submission.py  submissions.py  user.py  users.py
backend/project/static/: OpenAPI_Object.json  OpenAPI_Object.yaml
backend/project/utils/: authentication.py  files.py  misc.py  models.py  project.py  query_agent.py  user.py
backend/seeder/: __main__.py  elements.py  provider.py  seeder.py  titles.txt
backend/test_auth_server/: __init__.py  __main__.py  db_construct.sql  db_in.py  index.py  sessionmaker.py  user_data.py
backend/tests/: __init__.py  conftest.py
backend/tests/endpoints/: conftest.py  courses_test.py  endpoint.py  index_test.py  project_test.py  submissions_test.py  user_test.py
backend/tests/models/: conftest.py  course_relation_test.py  course_test.py  user_test.py  (+5 more)
(+225 files in other folders)
