[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "Description of your project"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "project/models" },
    { include = "seeder" },
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"