[tool.poetry]
name = "Peristerónas"
version = "1.0"
description = "Project submission platform"
authors = ["Aron","Gerwoud","Siebe","Matisse","Warre","Cedric"]
packages = [
    { include = "project/models" },
    { include = "seeder" },
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"